--- a/src/cv.tex
+++ b/src/cv.tex
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-skyblue}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -53,18 +53,18 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 \photo[circle,edge,right]{./src/profile}
-\name{Mats}{Krengel}
-\position{Senior Backend Engineer}
+\name{Ingrid}{Schulz}
+\position{Android Developer}
 \address{Some Street, Some Town, 12345 Zipcode, Some Country}
 
 \mobile{(+00) 11 22 33 44 55}
-\email{mats.krengel@gmail.com}
-\github{matskrengel}
-\linkedin{matskrengel}
-\xing{Mats\_Krengel}
+\email{fr.ingrid.schulz@gmail.com}
+% \github{}
+\linkedin{ingrid-schulz-43b674138}
+\xing{Ingrid\_Schulz22}
 
 
-% \homepage{www.matskrengel.de}
+% \homepage{}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -93,7 +93,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Mats Krengel~{\enskip\cdotp\enskip}~CV}
+  {Ingrid Schuly~{\enskip\cdotp\enskip}~CV}
   {\thepage}
 
 
