--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -12,37 +12,37 @@
 %---------------------------------------------------------
   \cvskill
     {Programming Languages} % Category
-    {Elixir, Java, C++, JavaScript, C\#} % Skills
+    {Java, Kotlin, PHP, JavaScript, Lotus Script} % Skills
   
 %---------------------------------------------------------
   \cvskill
-    {Frameworks and Libraries} % Category
-    {Phoenix, Spring Boot, libuv, GWT} % Skills
+    {Android Libraries} % Category
+    {Picasso, Okhttp, Leakcanary, Greendao, Room} % Skills
+  
+%---------------------------------------------------------
+  \cvskill
+    {PHP Libraries} % Category
+    {Symfony2, Zend, Smarty} % Skills
   
 %---------------------------------------------------------
   \cvskill
     {Databases} % Category
-    {PostgreSQL, MySQL, AWS DynamoDB} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Operations \& Infrastructure} % Category
-    {AWS, Docker, Kubernetes, Terraform, Chef} % Skills
+    {MySQL, SQLite, Notes Database} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Tools \& Workflow} % Category
-    {Git, CircleCI, Jenkins, Datadog, Opsgenie, Elasicsearch, Logstash, Kibana, Jira \& Confluence} % Skills
+    {Android Studio, Jira \& Confluence, Git, Subversion, CircleCI, Jenkins} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Agile Methodologies \& Practices} % Category
-    {Scrum, Kanban, Test Driven Development, Pair Programming, Timeboxing} % Skills
+    {Scrum, Kanban, Test Driven Development} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Operating Systems} % Category
-    {macOS, Linux (Alpine, Debian \& Ubuntu distros), Windows} % Skills
+    {macOS, Windows} % Skills
 
 %---------------------------------------------------------
   \cvskill
