--- a/src/cv/education.tex
+++ b/src/cv/education.tex
@@ -11,29 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.Sc. in Game Design \& Development} % Degree
-    {Mediadesign University of Applied Sciences} % Institution
-    {Berlin, Germany} % Location
-    {Oct. 2007 - Sep. 2010} % Date(s)
+    {Apprenticeship IT management assistant Certificate of Chamber of Industry and Commerce with 84 points} % Degree
+    {HBH-Kliniken GmbH} % Institution
+    {Singen am Hohentwiel, Germany} % Location
+    {09.2004 - 06.2007} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Game and realtime simulation development using C++ and Java}
-        \item {UDP and TCP game server networking and messaging systems in C++ and C\#}
+        \item {1st level support für clinic applications and MS products}
+        \item {System administation and user management in the active directory}
+        \item {Development of VBA scripts for internal use}
+        \item {Development of an internal used platform for the apprentices in PHP}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {IT Business Assistant} % Degree
+    {Advanced technical college certificate  focus on business informatics} % Degree
     {Technical School} % Institution
-    {Plön, Germany} % Location
-    {Aug. 2003 - Jun. 2005} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Business accounting and business administration}
-        \item {Office IT and software development in C++, PHP and relational databases}
-      \end{cvitems}
-    }
+    {Radolfzell am Bodensee, Germany} % Location
+    {2002 - Jun. 2004} % Date(s)
 
 %---------------------------------------------------------
 \end{cventries}
