--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -11,62 +11,87 @@
 
 %---------------------------------------------------------
   \cventry
-    {Senior Backend Engineer} % Job title
-    {Geenee GmbH} % Organization
+    {Android Developer} % Job title
+    {Geenee GmbH, Startup 10 employees} % Organization
     {Berlin, Germany} % Location
-    {Feb. 2016 - now} % Date(s)
+    {Oct. 2015 - now} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Backend engineering on a SaaS image recognition platform}
-        \item {Designed and implemented various core platform services offering RESTful HTTP APIs in Elixir (Phoenix), Java (Spring Boot and Dropwizard) and JavaScript (Node)}
+        \item {Further development of the first Geenee app which uses a patented technology for image recognition to present image related data}
         \begin{cvsubitems}
-          \item {Implemented authentication and authorization service in Elixir storing user, group and permission data in PostgreSQL and generating JSON Web Tokens upon login}
-          \item {Implemented content activation service in Elixir used to enable image projects to be recognized by the core recognition service}
-          \item {Created and maintained image annotation API in Java using Spring Boot which finally got replaced by Elixir in a platform rewrite}
+          \item {Sending, processing and displaying data from a REST API}
+          \item {Redesign and maintenance}
         \end{cvsubitems}
-        \item {Maintain and improve web server subsystem of core image recognition service written in C++ using libuv}
-        \item {Replace manual orchestration and scaling of AWS EC2 instances with AWS ElasticBeanstalk and Docker}
-        \item {Creating and maintaining AWS cloud infrastructure using Terraform}
-        \item {Setup continuous integration and continuous deployment pipelines for existing and new services using Github and CircleCI}
+        \item {Conception and development of the new Geenee app with agile methods since April 2018 self-reliant for the android department}
+        \begin{cvsubitems}
+          \item {Using state of the art architecture and API version to build the app anew from scratch}
+          \item {Implementation of an inhouse build patented library for local image recognition}
+          \item {Processing and displaying data from a REST API}
+          \item {Multiple redesigns}
+          \item {Responsible for the Play Store and the app release}
+        \end{cvsubitems}
+        \item {Developing Tech-Demos for sales pitches}
+        \item {Since May 2018 responsible for the whole mobile department}
+        \begin{cvsubitems}
+        \item {Planning and coordination of the development for the Geenee iOS app with an external contractor}
+        \item {Executing simple tasks in the Geenee iOS app}
+        \item {Release and Testflight management in the App Store}
+        \end{cvsubitems}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Backend Engineer \& Tech Lead Asia Integration} % Job title
-    {Bigpoint GmbH} % Organization
+    {Internship Android Development} % Job title
+    {Geenee GmbH, Startup 10 employees} % Organization
     {Berlin, Germany} % Location
-    {Dec. 2010 - Jan. 2016} % Date(s)
+    {Sep. 2015} % Date(s)
+
+%---------------------------------------------------------
+  \cventry
+    {Web Developer and Project Manager Android} % Job title
+    {wetter.com GmbH} % Organization
+    {Berlin, Germany} % Location
+    {Apr. 2014 - Jun. 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Leading a small development team to integrate Drakensang Online into platforms of Asian and MENA region license takers}
-        \begin{cvsubitems}
-          \item {Extending the game platforms API to integrate with partner payment and virtual currency systems as well as Chinese and Korean anti-addiction policies}
-          \item {Release engineering of individual game builds for license takers}
-          \item {Migrating game servers from private datacenter machines into IBM Softlayer, AWS and license taker infrastructure}
-          \item {Attempted to slice monolithic game servers into smaller services running in Docker containers on partner platforms}
-        \end{cvsubitems}
-        \item {Backend engineering on Drakensang Online, a massively multiplayer online role-playing game}
-        \begin{cvsubitems}
-          \item {Designed and implemented core game administration and CRM tool as web application in Java and the Google Web Toolkit}
-          \item {Optimized inter-process communication of forked game server processes using shared memory in C++}
-          \item {Operated deployments and database migrations of global production game servers}
-          \item {Implemented gameplay and UI features in the game client written in C++}
-        \end{cvsubitems}
+        \item {Conception of the redevelopment and further features of the weather app for Android according to Scrum in cooperation with agencies}
+        \item {Elaboration of user stories as a Project Manager}
+        \item {Creation and evaluation of user surveys and feedback in order to improve the wetter.com Weather apps (Android and iOS)}
+        \item {Self-reliant development of features in Java with Android Studio}
+        \item {Further development of a REST-interface in PHP}
       \end{cvitems}
     }
 
   %---------------------------------------------------------
   \cventry
-    {Web Developer, Contractor} % Job title
-    {Two Pi Team GbR} % Organization
-    {Remote} % Location
-    {Dec. 2008 - Oct. 2010} % Date(s)
+    {Web Developer} % Job title
+    {Hohentwielverlag \& Internet GmbH, part of the wetter.com group} % Organization
+    {Singen am Hohentwiel, Germany} % Location
+    {Jul. 2010 - Mar. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Full stack development on gaming community portal Wheel of Games}
-        \item {Improving inhouse content management system based on PHP and MySQL}
-        \item {Development of commenting and rating systems within the portal using PHP, CSS and JavaScript}
+        \item {Web development as part of the wetter.com relaunch in PHP with Symfony2}
+        \item {Support of the mobile department with user support, feature development and bugfixes}
+        \item {Feature development and support of the Hohentwielverlag and wetter.com apps}
+        \item {Support of the Windows Phone 8/8.1 and Blackberry apps}
+        \item {Web development for customer projects in PHP}
+        \item {Development to increase PI for the customer website FIT GESUND SCHÖN media GmbH through SEO analysis}
+        \item {Conception and development of the websites internate-portal.de and privatklinik-portal.de}
+      \end{cvitems}
+    }
+    
+    %---------------------------------------------------------
+  \cventry
+    {Lotus Notes Developer} % Job title
+    {Nexus\/IT} % Organization
+    {Singen am Hohentwiel, Germany} % Location
+    {Sep. 2007 - Jun. 2010} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Further development of an application for the cleaning sector Nexus\/DICO in Lotus Notes with Lotus Script}
+        \item {Conception and development of Lotus Notes Databases for internal use}
+        \item {Porting of an internal used VBA application from Word 2003 to Word 2007 for creating bulk letters with an interface to Lotus Notes}
       \end{cvitems}
     }
 
