--- a/src/cv/summary.tex
+++ b/src/cv/summary.tex
@@ -10,8 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-I am a generalist in backend engineering and operations of cloud infrastructure with 10+ years of professional experience. During that time I've defined, implemented and operated services, tools and platforms in Elixir, Java, C++ and JavaScript used globally by thousands of concurrent users and players. 
+I am a passionate developer with a wide range of interests with over 10 years of professional experience in different fields and technologies. Currently I'm working as an android developer and I'm also developing apps for friends, fun or to improve my skills. 
 
-Besides my profession as an engineer, I like to run long distances, hike and play the guitar.
-
+In my free time I'm keeping a balance between programming and playing on the computer and doing sports like Zumba or bouldering or doing crafts.
 \end{cvparagraph}
