--- a/src/cv.tex
+++ b/src/cv.tex
@@ -59,7 +59,7 @@
 
 \mobile{(+00) 11 22 33 44 55}
 \email{fr.ingrid.schulz@gmail.com}
-% \github{}
+\bitbucket{Lilim}
 \linkedin{ingrid-schulz-43b674138}
 \xing{Ingrid\_Schulz22}
 
@@ -93,7 +93,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Ingrid Schuly~{\enskip\cdotp\enskip}~CV}
+  {Ingrid Schulz~{\enskip\cdotp\enskip}~CV}
   {\thepage}
 
 
@@ -104,7 +104,7 @@
 \input{src/cv/summary.tex}
 \input{src/cv/skills.tex}
 \input{src/cv/experience.tex}
-\cvnewpage{}
+%\cvnewpage{}
 \input{src/cv/education.tex}
 % \input{src/cv/presentation.tex}
 
