--- a/src/cv/education.tex
+++ b/src/cv/education.tex
@@ -14,7 +14,7 @@
     {Apprenticeship IT management assistant Certificate of Chamber of Industry and Commerce with 84 points} % Degree
     {HBH-Kliniken GmbH} % Institution
     {Singen am Hohentwiel, Germany} % Location
-    {09.2004 - 06.2007} % Date(s)
+    {Sep. 2004 - Jun. 2007} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {1st level support für clinic applications and MS products}
@@ -29,7 +29,8 @@
     {Advanced technical college certificate  focus on business informatics} % Degree
     {Technical School} % Institution
     {Radolfzell am Bodensee, Germany} % Location
-    {2002 - Jun. 2004} % Date(s)
+    {Sep. 2002 - Jun. 2004} % Date(s)
+    {}
 
 %---------------------------------------------------------
 \end{cventries}
