--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -22,13 +22,14 @@
           \item {Sending, processing and displaying data from a REST API}
           \item {Redesign and maintenance}
         \end{cvsubitems}
-        \item {Conception and development of the new Geenee app with agile methods since April 2018 self-reliant for the android department}
+        \item {Conception and development of the new Geenee app with agile methods}
         \begin{cvsubitems}
           \item {Using state of the art architecture and API version to build the app anew from scratch}
           \item {Implementation of an inhouse build patented library for local image recognition}
           \item {Processing and displaying data from a REST API}
           \item {Multiple redesigns}
           \item {Responsible for the Play Store and the app release}
+          \item {Since April 2018 self-reliant for the android department}
         \end{cvsubitems}
         \item {Developing Tech-Demos for sales pitches}
         \item {Since May 2018 responsible for the whole mobile department}
@@ -46,6 +47,7 @@
     {Geenee GmbH, Startup 10 employees} % Organization
     {Berlin, Germany} % Location
     {Sep. 2015} % Date(s)
+    {}
 
 %---------------------------------------------------------
   \cventry
@@ -84,7 +86,7 @@
     %---------------------------------------------------------
   \cventry
     {Lotus Notes Developer} % Job title
-    {Nexus\/IT} % Organization
+    {Nexus/IT} % Organization
     {Singen am Hohentwiel, Germany} % Location
     {Sep. 2007 - Jun. 2010} % Date(s)
     {
