--- a/src/cv/summary.tex
+++ b/src/cv/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-I am a passionate developer with a wide range of interests with over 10 years of professional experience in different fields and technologies. Currently I'm working as an android developer and I'm also developing apps for friends, fun or to improve my skills. 
+I am a passionate developer with a wide range of interests and over 10 years of professional experience in different fields and technologies. Currently I'm working as an android developer and in my free time I'm also developing apps for friends, fun or to improve my skills. 
 
 In my free time I'm keeping a balance between programming and playing on the computer and doing sports like Zumba or bouldering or doing crafts.
 \end{cvparagraph}
