--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -25,10 +25,10 @@
         \item {Conception and development of the new Geenee app with agile methods}
         \begin{cvsubitems}
           \item {Using state of the art architecture and API version to build the app anew from scratch}
-          \item {Implementation of an inhouse build patented library for local image recognition}
+          \item {Implementation of an inhouse build library for local image recognition}
           \item {Processing and displaying data from a REST API}
           \item {Multiple redesigns}
-          \item {Responsible for the Play Store and the app release}
+          \item {Responsible for the Play Store and the app release workflow}
           \item {Since April 2018 self-reliant for the android department}
         \end{cvsubitems}
         \item {Developing Tech-Demos for sales pitches}
@@ -91,7 +91,7 @@
     {Sep. 2007 - Jun. 2010} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Further development of an application for the cleaning sector Nexus\/DICO in Lotus Notes with Lotus Script}
+        \item {Further development of an application for the cleaning sector Nexus/DICO in Lotus Notes with Lotus Script}
         \item {Conception and development of Lotus Notes Databases for internal use}
         \item {Porting of an internal used VBA application from Word 2003 to Word 2007 for creating bulk letters with an interface to Lotus Notes}
       \end{cvitems}
