--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -16,12 +16,7 @@
   
 %---------------------------------------------------------
   \cvskill
-    {Android Libraries} % Category
-    {Picasso, Okhttp, Leakcanary, Greendao, Room} % Skills
-  
-%---------------------------------------------------------
-  \cvskill
-    {PHP Libraries} % Category
+    {Frameworks and Libraries} % Category
     {Symfony2, Zend, Smarty} % Skills
   
 %---------------------------------------------------------
