--- a/src/cv/summary.tex
+++ b/src/cv/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-I am a passionate developer with a wide range of interests and over 10 years of professional experience in different fields and technologies. Currently I'm working as an android developer and in my free time I'm also developing apps for friends, fun or to improve my skills. 
+I am a passionate developer with a wide range of interests and over 10 years of professional experience in various fields and technologies. Currently I am employed as a developer for Android. Additionally, I enjoy to develop and redevelop new and existing apps self-reliant. 
 
-In my free time I'm keeping a balance between programming and playing on the computer and doing sports like Zumba or bouldering or doing crafts.
+In order to keep a positive work-life balance I do sports like Zumba or bouldering and do crafts.
 \end{cvparagraph}
