--- a/src/cv.tex
+++ b/src/cv.tex
@@ -106,7 +106,7 @@
 \input{src/cv/experience.tex}
 %\cvnewpage{}
 \input{src/cv/education.tex}
-% \input{src/cv/presentation.tex}
+\input{src/cv/presentation.tex}
 
 %-------------------------------------------------------------------------------
 \end{document}
