--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -44,7 +44,7 @@
 %---------------------------------------------------------
   \cventry
     {Internship Android Development} % Job title
-    {Geenee GmbH, Startup 10 employees} % Organization
+    {Geenee GmbH} % Organization
     {Berlin, Germany} % Location
     {Sep. 2015} % Date(s)
     {}
@@ -92,10 +92,18 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Further development of an application for the cleaning sector Nexus/DICO in Lotus Notes with Lotus Script}
-        \item {Conception and development of Lotus Notes Databases for internal use}
+        \item {Conception and development of Lotus Notes Databases (Team calendar, Holiday planning)}
         \item {Porting of an internal used VBA application from Word 2003 to Word 2007 for creating bulk letters with an interface to Lotus Notes}
       \end{cvitems}
     }
+
+%---------------------------------------------------------
+  \cventry
+    {Internship Lotus Notes Development} % Job title
+    {Nexus/IT} % Organization
+    {Singen am Hohentwiel, Germany} % Location
+    {Aug. 2007} % Date(s)
+    {}
 
 %---------------------------------------------------------
 \end{cventries}
