--- a/src/cv/presentation.tex
+++ b/src/cv/presentation.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Presentation}
+\cvsection{Released app}
 
 
 %-------------------------------------------------------------------------------
@@ -11,13 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {Co-Presenter in 'From Retail to Free to Play: The Drakensang Online Journey'} % Role
-    {Korea Game Conference} % Event
-    {Seoul, South Korea} % Location
-    {Nov. 2014} % Date(s)
+    {Geenee GmbH} % Role
+    {Geenee Live app for Android} % Event
+    {} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Introduced Drakensang Onlines technical stack and how the game was modified for a Korean audience}
+        \item {Play Store: https://play.google.com/store/apps/details?id=me.geenee.camera}
+        \item {With the Geenee Live app the user can take a photo of supported media and get all associated data within the app.
+To see what images can be recognized please visit www.geenee.me/campaigns}
       \end{cvitems}
     }
 
