--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Frameworks and Libraries} % Category
-    {Symfony2, Zend, Smarty} % Skills
+    {Picasso, Gson, Volley, greenDAO, room, Symfony2, Zend, Smarty} % Skills
   
 %---------------------------------------------------------
   \cvskill
@@ -27,7 +27,7 @@
 %---------------------------------------------------------
   \cvskill
     {Tools \& Workflow} % Category
-    {Android Studio, Jira \& Confluence, Git, Subversion, CircleCI, Jenkins} % Skills
+    {Android Studio, Eclipse, Jira \& Confluence, Git, Subversion, CircleCI, Jenkins} % Skills
 
 %---------------------------------------------------------
   \cvskill
