--- a/src/cv/education.tex
+++ b/src/cv/education.tex
@@ -11,22 +11,22 @@
 
 %---------------------------------------------------------
   \cventry
-    {Apprenticeship IT management assistant Certificate of Chamber of Industry and Commerce with 84 points} % Degree
+    {Apprenticeship IT management assistant Certificate of Chamber of Industry and Commerce} % Degree
     {HBH-Kliniken GmbH} % Institution
     {Singen am Hohentwiel, Germany} % Location
     {Sep. 2004 - Jun. 2007} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {1st level support für clinic applications and MS products}
-        \item {System administation and user management in the active directory}
+        \item {1st level support für clinic applications and Microsoft products}
+        \item {System administation and user management in Active Directory}
         \item {Development of VBA scripts for internal use}
-        \item {Development of an internal used platform for the apprentices in PHP}
+        \item {Development of an internally used platform for apprentices in PHP}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Advanced technical college certificate  focus on business informatics} % Degree
+    {Advanced technical college certificate focus on business informatics} % Degree
     {Technical School} % Institution
     {Radolfzell am Bodensee, Germany} % Location
     {Sep. 2002 - Jun. 2004} % Date(s)
