--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -28,14 +28,14 @@
           \item {Implementation of an inhouse build library for local image recognition}
           \item {Processing and displaying data from a REST API}
           \item {Multiple redesigns}
-          \item {Responsible for the Play Store and the app release workflow}
+          \item {Responsible for Play Store and app release workflow}
           \item {Since April 2018 self-reliant for the android department}
         \end{cvsubitems}
         \item {Developing Tech-Demos for sales pitches}
         \item {Since May 2018 responsible for the whole mobile department}
         \begin{cvsubitems}
-        \item {Planning and coordination of the development for the Geenee iOS app with an external contractor}
-        \item {Executing simple tasks in the Geenee iOS app}
+        \item {Planning and coordination of development for Geenee iOS app with an external contractor}
+        \item {Bugfixing and maintaining of Geenee iOS app}
         \item {Release and Testflight management in the App Store}
         \end{cvsubitems}
       \end{cvitems}
@@ -59,7 +59,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Conception of the redevelopment and further features of the weather app for Android according to Scrum in cooperation with agencies}
         \item {Elaboration of user stories as a Project Manager}
-        \item {Creation and evaluation of user surveys and feedback in order to improve the wetter.com Weather apps (Android and iOS)}
+        \item {Creation and evaluation of user surveys and feedback in order to improve wetter.com weather apps (Android and iOS)}
         \item {Self-reliant development of features in Java with Android Studio}
         \item {Further development of a REST-interface in PHP}
       \end{cvitems}
@@ -68,18 +68,18 @@
   %---------------------------------------------------------
   \cventry
     {Web Developer} % Job title
-    {Hohentwielverlag \& Internet GmbH, part of the wetter.com group} % Organization
+    {Hohentwielverlag \& Internet GmbH, part of wetter.com group} % Organization
     {Singen am Hohentwiel, Germany} % Location
     {Jul. 2010 - Mar. 2014} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Web development as part of the wetter.com relaunch in PHP with Symfony2}
-        \item {Support of the mobile department with user support, feature development and bugfixes}
-        \item {Feature development and support of the Hohentwielverlag and wetter.com apps}
-        \item {Support of the Windows Phone 8/8.1 and Blackberry apps}
+        \item {Web development as part of wetter.com relaunch in PHP with Symfony2}
+        \item {Support of mobile department with user support, feature development and bugfixes}
+        \item {Feature development and support of Hohentwielverlag and wetter.com apps}
+        \item {Support of Windows Phone 8/8.1 and Blackberry apps}
         \item {Web development for customer projects in PHP}
-        \item {Development to increase PI for the customer website FIT GESUND SCHÖN media GmbH through SEO analysis}
-        \item {Conception and development of the websites internate-portal.de and privatklinik-portal.de}
+        \item {Development to increase PI for customer website FIT GESUND SCHÖN media GmbH through SEO analysis}
+        \item {Conception and development of websites internate-portal.de and privatklinik-portal.de}
       \end{cvitems}
     }
     
@@ -93,7 +93,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Further development of an application for the cleaning sector Nexus/DICO in Lotus Notes with Lotus Script}
         \item {Conception and development of Lotus Notes Databases (Team calendar, Holiday planning)}
-        \item {Porting of an internal used VBA application from Word 2003 to Word 2007 for creating bulk letters with an interface to Lotus Notes}
+        \item {Porting of an internally used VBA application from Word 2003 to Word 2007 for creating bulk letters with an interface to Lotus Notes}
       \end{cvitems}
     }
 
