--- a/src/cv/presentation.tex
+++ b/src/cv/presentation.tex
@@ -11,15 +11,28 @@
 
 %---------------------------------------------------------
   \cventry
+    {Private Project} % Role
+    {Schedule app for 35C3} % Event
+    {} % Location
+    {} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {An alternative schedule app for 35C3 and following events}
+        \item {Repository: https://bitbucket.org/Lilim/talks}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
     {Geenee GmbH} % Role
     {Geenee Live app for Android} % Event
     {} % Location
     {} % Date(s)
     {
       \begin{cvitems} % Description(s)
-        \item {Play Store: https://play.google.com/store/apps/details?id=me.geenee.camera}
         \item {With the Geenee Live app the user can take a photo of supported media and get all associated data within the app.
 To see what images can be recognized please visit www.geenee.me/campaigns}
+        \item {Play Store: https://play.google.com/store/apps/details?id=me.geenee.camera}
       \end{cvitems}
     }
 
