--- a/src/cv/summary.tex
+++ b/src/cv/summary.tex
@@ -13,5 +13,5 @@
 I am a passionate developer with a wide range of interests and over 10 years of professional experience in various fields and 
 technologies. Currently I am employed as a developer for Android. Additionally, I enjoy to develop and redevelop new and existing apps self-reliant. 
 
-In order to keep a positive work-life balance I do sports like Zumba or bouldering and do crafts.
+In order to keep a positive work-life balance I do sports like Zumba or bouldering and I enjoy crafting.
 \end{cvparagraph}
