--- a/src/coverletter.tex
+++ b/src/coverletter.tex
@@ -107,7 +107,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {Ingrid Schulz~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter informations
@@ -119,13 +119,18 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+In 2014 after 6 years of web development I wanted to lern something new and interesting and so I started to learn Android development. Mostly on private projects for friends or for fun but at a short amount of time I was able to bugfix the wetter.com weather app. After two years of Project Management my frustration of coming up with ideas, planning them but never being allowed to develop them by myself grew. So I quit my job and started working as a full time Android developer. 
+On of the things I learned from my last position is the continuous search for a way to improve an app but keeping the company needs in mind.
+When I started my current job I took over the previous app and after a few months I finally convinced my supervisor to start the app again from scratch. This was a great opportunity for me to upgrade the app architecture e.g. using the Master Detail Flow, getting rid of deprecated code and using the latest Android API version. In order to get everything work smoothly I worked closely together with the image recognition and the backend team.
+After the project manager and the last remaining iOS developer left in 2018 I took over the responsibility for the whole mobile department. To develop tech demos for upcoming sales pitches I worked closely together with a freelancer. During that time I learned a few bits of Swift to be able to do quick bugfixes.
+Last year I also started learning Kotlin to improve my Android skills and did some private apps to practice. The far most developed app of them is a schedule for the 35C3. I went to the congress and was annoyed of the performance of the official app so I started to work on an alternative. It is not feature complete because of that it is not on the store right now.
 
-\lettersection{Why Google?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+\lettersection{Why Zalando?}
+Zalando is for me a pefect place to contribute my skills and knowledge. Online shopping especially for clothes is an important part of our lives today. I deeply understand the importance of an easy to use and fast app to create a pleasant experience for users. Working close together with other developers on an app that is used and enjoyed by millions of people is one of my main goals.
 
 \lettersection{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+I'm a passionate developer with lots of experience in different fields and a high willingness to lern new and improve my existing skills. I always keep the customers in mind while working on an app to get a balance between customer satisfaction and company success. 
+I have a long endurance and everything I do not know yet I am very happy to learn.
 
 \end{cvletter}
 
