--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Frameworks and Libraries} % Category
-    {Picasso, Gson, Volley, greenDAO, room, Symfony2, Zend, Smarty} % Skills
+    {Picasso, Gson, Volley, Fabric, greenDAO, room, Symfony2, Zend, Smarty} % Skills
   
 %---------------------------------------------------------
   \cvskill
