--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -12,11 +12,12 @@
 %---------------------------------------------------------
   \cventry
     {Android Developer} % Job title
-    {Geenee GmbH, Startup 10 employees} % Organization
+    {Geenee GmbH} % Organization
     {Berlin, Germany} % Location
-    {Oct. 2015 - now} % Date(s)
+    {Sep. 2015 - now} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Internship in September 2015}
         \item {Further development of the first Geenee app which uses a patented technology for image recognition to present image related data}
         \begin{cvsubitems}
           \item {Sending, processing and displaying data from a REST API}
@@ -40,14 +41,6 @@
         \end{cvsubitems}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Internship Android Development} % Job title
-    {Geenee GmbH} % Organization
-    {Berlin, Germany} % Location
-    {Sep. 2015} % Date(s)
-    {}
 
 %---------------------------------------------------------
   \cventry
@@ -88,22 +81,15 @@
     {Lotus Notes Developer} % Job title
     {Nexus/IT} % Organization
     {Singen am Hohentwiel, Germany} % Location
-    {Sep. 2007 - Jun. 2010} % Date(s)
+    {Aug. 2007 - Jun. 2010} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Internship in August 2017}
         \item {Further development of an application for the cleaning sector Nexus/DICO in Lotus Notes with Lotus Script}
         \item {Conception and development of Lotus Notes Databases (Team calendar, Holiday planning)}
         \item {Porting of an internally used VBA application from Word 2003 to Word 2007 for creating bulk letters with an interface to Lotus Notes}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Internship Lotus Notes Development} % Job title
-    {Nexus/IT} % Organization
-    {Singen am Hohentwiel, Germany} % Location
-    {Aug. 2007} % Date(s)
-    {}
 
 %---------------------------------------------------------
 \end{cventries}
