--- a/src/cv/summary.tex
+++ b/src/cv/summary.tex
@@ -10,8 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-I am a passionate developer with a wide range of interests and over 10 years of professional experience in various fields and 
-technologies. Currently I am employed as a developer for Android. Additionally, I enjoy to develop and redevelop new and existing apps self-reliant. 
+I am a passionate developer with a wide range of interests and over 10 years of professional experience in various fields and technologies. Android is an interesting field for me and I enjoy to develop apps professionally and self-reliant. 
 
-In order to keep a positive work-life balance I do sports like Zumba or bouldering and I enjoy crafting.
+In order to keep a positive work-life balance I do sports like Zumba or Bouldering and crafts.
 \end{cvparagraph}
